--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,30 @@
 *{
     box-sizing: border-box;
 }
+
+body {
+    background-color: lightgreen;
+    padding: 15px;
+    border: 5px darkgreen;
+    color: darkgreen;
+}
+
+header {
+    padding: 15px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: darkgreen;
+    color:lightgreen;
+    border: 5px darkgreen;
+    
+}
+
+img {
+    width: 934px;
+    height: auto;
+}
+
+header ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
